# SkillSync

./: .gitignore  Procfile  Skill Sync — Agentic Career Mentor (day‑by‑day Build Guide).docx  agents.yaml  custom_tool.py  loader.py  main.py  pyproject.toml  requirements.txt  seed_playlists.py  skill_sync_agentic_career_mentor_day_by_day_build_guide.md  tasks.yaml  test.py  ~$ill Sync — Agentic Career Mentor (day‑by‑day Build Guide).docx
Project/: README.md
Project/src/: test_task.py
Project/src/project/: agents.yaml  dashboard.html  loader.py  main.py  main_.py  mongodb_helper.py  seed_playlists.py  tasks.yaml
Project/src/project/crews/poem_crew/config/: agents.yaml  tasks.yaml
Project/src/project/templates/: agent.html  base.html  career-paths.html  dashboard.html  footer.html  goal-interpreter.html  index.html  index_3.html  jobs.html  roadmap.html  signup.html
Project/src/static/: index.css  style.css
static/: script.js
templates/: admin.html  daily_planner.html  dashboard.html  footer.html  index.html  index2.html  jobs.html  login.html  navbar.html  onboarding_form.html  playlists.html  resource_hub.html  resources.html  signup.html
